<resources>
    <string name="app_name">App Loja Virtual Client</string>
    <string name="loja_virtual"><font color='#3F51B5'>Loja</font> Virtual</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastro">Não tem uma conta? Cadastre-se agora!</string>
    <string name="txt_tela_cadastro">Faça seu Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="google_server_client_id" translatable="false">884039011964-ophdlnt5vtnqon3mb3a25khb2ddd7qbl.apps.googleusercontent.com</string>
    <string name="txt_dialog_carregando">Carregando...</string>
    <string name="perfil">Perfil</string>
    <string name="pedidos">Pedidos</string>
    <string name="selecionar_foto">Selecione uma Foto</string>
    <string name="atualizar">Atualizar Perfil</string>
    <string name="sair">Sair</string>
    <string name="escolha_tamanho">Escolha o Tamanho</string>
    <string name="preco">Preço:</string>
    <string name="finalizar_pedido">Finalizar Pedido</string>
    <string name="tamanho_38">38</string>
    <string name="tamanho_39">39</string>
    <string name="tamanho_40">40</string>
    <string name="tamanho_41">41</string>
    <string name="tamanho_42">42</string>
    <string name="txt_endereco">Preencha todos os campos antes \n de fazer o pagamento!</string>
    <string name="cep">CEP <b><font color="#FF0000">*</font></b></string>
    <string name="pesquisar_cep">Pesquisar CEP</string>
    <string name="bairro">Bairro <b><font color="#FF0000">*</font></b></string>
    <string name="rua">Rua <b><font color="#FF0000">*</font></b></string>
    <string name="numero">Número <b><font color="#FF0000">*</font></b></string>
    <string name="cidade">Cidade <b><font color="#FF0000">*</font></b></string>
    <string name="estado">Estado <b><font color="#FF0000">*</font></b></string>
    <string name="complemento">Complemento</string>
    <string name="ddd">DDD</string>
    <string name="telefone">telefone</string>
    <string name="bt_pagamento">Fazer Pagamento</string>
    <string name="obrigatorio">Campos obrigatórios marcados com *</string>

</resources>