<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetalhesProduto.DetalhesProduto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgFotoProduto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ic_launcher_background"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/nomeProdutoDt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_margin="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escolha_tamanho"
        android:textSize="18sp"
        android:gravity="center"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tamanho_38"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:layout_marginEnd="10dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tamanho_39"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:layout_marginEnd="10dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tamanho_40"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:layout_marginEnd="10dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tamanho_41"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:layout_marginEnd="10dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tamanho_42"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:layout_marginEnd="10dp"
            />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        />

    <TextView
        android:id="@+id/precoProdutoDt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginStart="20dp"
        />

    <Button
        android:id="@+id/btFinalizarPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finalizar_pedido"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:backgroundTint="@color/blue"
        android:padding="15dp"
        android:layout_margin="20dp"
        />

</LinearLayout>
</androidx.core.widget.NestedScrollView>