<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FormCadastro.FormCadastro"
    android:background="@color/white">

    <TextView
    android:id="@+id/txtTelaCadastro"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_tela_cadastro"
    android:textSize="30sp"
    android:textStyle="bold"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="50dp"
    />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_perfil"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelaCadastro"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/bt_atualizar_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selecione uma Foto"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/img_perfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <View
        android:id="@+id/viewCadastro"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:background="@drawable/container_formularios"
        app:layout_constraintTop_toBottomOf="@+id/bt_atualizar_foto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_margin="20dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:text=""
        android:inputType="text"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:maxLines="1"
        android:background="@drawable/edit_shape"
        android:padding="15sp"
        app:layout_constraintTop_toTopOf="@+id/viewCadastro"
        app:layout_constraintStart_toStartOf="@+id/viewCadastro"
        app:layout_constraintEnd_toEndOf="@+id/viewCadastro"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />



    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:text=""
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:maxLines="1"
        android:background="@drawable/edit_shape"
        android:padding="15sp"
        app:layout_constraintTop_toBottomOf="@+id/editNome"
        app:layout_constraintStart_toStartOf="@+id/viewCadastro"
        app:layout_constraintEnd_toEndOf="@+id/viewCadastro"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:text=""
        android:inputType="textPassword"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@drawable/edit_shape"
        android:maxLines="1"
        android:padding="15sp"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="@+id/viewCadastro"
        app:layout_constraintEnd_toEndOf="@+id/viewCadastro"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />
    <ImageView
        android:id="@+id/mostrarSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_show"
        app:layout_constraintEnd_toEndOf="@+id/editSenha"
        app:layout_constraintTop_toTopOf="@+id/editSenha"
        app:layout_constraintBottom_toBottomOf="@+id/editSenha"
        android:layout_marginEnd="10dp"
        />

    <EditText
        android:id="@+id/editConfirmarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmar_senha"
        android:text=""
        android:inputType="textPassword"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@drawable/edit_shape"
        android:maxLines="1"
        android:padding="15sp"
        app:layout_constraintTop_toBottomOf="@+id/editSenha"
        app:layout_constraintStart_toStartOf="@+id/viewCadastro"
        app:layout_constraintEnd_toEndOf="@+id/viewCadastro"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />

    <ImageView
        android:id="@+id/mostrarConfirmarSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_show"
        app:layout_constraintEnd_toEndOf="@+id/editConfirmarSenha"
        app:layout_constraintTop_toTopOf="@+id/editConfirmarSenha"
        app:layout_constraintBottom_toBottomOf="@+id/editConfirmarSenha"
        android:layout_marginEnd="10dp"
        />

    <Button
        android:id="@+id/btCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:backgroundTint="@color/black"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editConfirmarSenha"
        app:layout_constraintStart_toStartOf="@+id/viewCadastro"
        app:layout_constraintEnd_toEndOf="@+id/viewCadastro"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>