<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FormLogin.FormLogin"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/txtLojaVitual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loja_virtual"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />

    <View
        android:id="@+id/viewLogin"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/container_formularios"
        app:layout_constraintTop_toBottomOf="@+id/txtLojaVitual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:text=""
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:maxLines="1"
            android:background="@drawable/edit_shape"
            android:padding="15sp"
            app:layout_constraintTop_toTopOf="@+id/viewLogin"
            app:layout_constraintStart_toStartOf="@+id/viewLogin"
            app:layout_constraintEnd_toEndOf="@+id/viewLogin"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            />

        <EditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:text=""
            android:inputType="textPassword"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:background="@drawable/edit_shape"
            android:maxLines="1"
            android:padding="15sp"
            app:layout_constraintTop_toBottomOf="@+id/editEmail"
            app:layout_constraintStart_toStartOf="@+id/viewLogin"
            app:layout_constraintEnd_toEndOf="@+id/viewLogin"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            />

            <Button
                android:id="@+id/btEntrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entrar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:backgroundTint="@color/black"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/editSenha"
                app:layout_constraintStart_toStartOf="@+id/viewLogin"
                app:layout_constraintEnd_toEndOf="@+id/viewLogin"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/btEntrar"
        app:layout_constraintStart_toStartOf="@+id/viewLogin"
        app:layout_constraintEnd_toEndOf="@+id/viewLogin"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/red"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/viewLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/txtCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/viewLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>